Something something working

--- a/ASL_trans_ML.ipynb
+++ b/ASL_trans_ML.ipynb
@@ -2,43 +2,202 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torchinfo\n"
+    "import torchinfo\n",
+    "import os\n",
+    "from string import ascii_lowercase\n",
+    "import csv\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomDataset(torch.utils.data.Dataset):\n",
-    "    def __init__(self, data_as_np):\n",
-    "        pass\n",
+    "    def __init__(self):\n",
+    "        self.data = {\"data\":[], \"label\":[]}\n",
+    "        self.length = 0\n",
+    "        class_index = 0\n",
+    "        for c in ascii_lowercase:\n",
+    "            with open(c + \".csv\") as csv_file:\n",
+    "                reader = csv.reader(csv_file)\n",
+    "                for row in reader:\n",
+    "                    int_row = [int(element) for element in row]\n",
+    "                    self.data[\"data\"].append(torch.tensor(int_row, dtype=torch.float32))\n",
+    "                    self.data[\"label\"].append(torch.tensor(class_index))\n",
+    "                    self.length += 1\n",
+    "            class_index += 1\n",
+    "\n",
+    "        for i in range(len(self.data[\"data\"])):\n",
+    "            self.data[\"data\"][i] /=  4095\n",
     "    def __getitem__(self, index):\n",
-    "        pass\n",
+    "        return self.data[\"data\"][index].unsqueeze(0), self.data[\"label\"][index]\n",
     "    def __len__(self):\n",
-    "        pass"
+    "        return self.length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18071"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = CustomDataset()\n",
+    "len(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((tensor([[1.0000, 0.0781, 0.6557, 1.0000, 0.0063, 0.8850, 1.0000]]),\n",
+       "  tensor(7)),\n",
+       " (tensor([[1.0000, 0.3133, 0.7263, 0.7221, 0.1299, 0.7346, 0.8066]]),\n",
+       "  tensor(25)))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainset, testset = torch.utils.data.random_split(dataset, [15361,2710])\n",
+    "train_loader = torch.utils.data.DataLoader(trainset, batch_size=8, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(testset, batch_size=4, shuffle=True)\n",
+    "\n",
+    "trainset[0], trainset[1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "==========================================================================================\n",
+       "Layer (type:depth-idx)                   Output Shape              Param #\n",
+       "==========================================================================================\n",
+       "Model                                    [8, 26]                   --\n",
+       "├─Sequential: 1-1                        [8, 8, 3]                 --\n",
+       "│    └─Conv1d: 2-1                       [8, 4, 5]                 16\n",
+       "│    └─Dropout1d: 2-2                    [8, 4, 5]                 --\n",
+       "│    └─ReLU: 2-3                         [8, 4, 5]                 --\n",
+       "│    └─Conv1d: 2-4                       [8, 8, 3]                 104\n",
+       "│    └─Dropout1d: 2-5                    [8, 8, 3]                 --\n",
+       "│    └─ReLU: 2-6                         [8, 8, 3]                 --\n",
+       "├─Linear: 1-2                            [8, 32]                   800\n",
+       "├─Linear: 1-3                            [8, 26]                   858\n",
+       "==========================================================================================\n",
+       "Total params: 1,778\n",
+       "Trainable params: 1,778\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (M): 0.02\n",
+       "==========================================================================================\n",
+       "Input size (MB): 0.00\n",
+       "Forward/backward pass size (MB): 0.01\n",
+       "Params size (MB): 0.01\n",
+       "Estimated Total Size (MB): 0.01\n",
+       "=========================================================================================="
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Model(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Model, self).__init__()\n",
+    "        self.conv_layers = nn.Sequential(nn.Conv1d(in_channels=1, out_channels=4, kernel_size=3),\n",
+    "                                    nn.Dropout1d(0.5),\n",
+    "                                    nn.ReLU(),\n",
+    "                                    nn.Conv1d(in_channels=4, out_channels=8, kernel_size=3),\n",
+    "                                    nn.Dropout1d(0.5),\n",
+    "                                    nn.ReLU()\n",
+    "                                    )\n",
     "        \n",
-    "    def forward(x):\n",
-    "        pass"
+    "        self.linear = nn.Linear(8 * 3, 32)\n",
+    "        self.out = nn.Linear(32, 26)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.conv_layers(x)\n",
+    "        x = nn.Flatten()(x)\n",
+    "        x = nn.ReLU()(self.linear(x))\n",
+    "        x = self.out(x)\n",
+    "        #x = nn.LogSoftmax()(x)\n",
+    "        return x\n",
+    "    \n",
+    "test = Model()\n",
+    "torchinfo.summary(test, (8, 1, 7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\n",
+    "def train(train_loader, model, epochs, beta, loss_function):\n",
+    "    writer = SummaryWriter()\n",
+    "    model.cuda()\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), weight_decay=1e-07)\n",
+    "    \n",
+    "    with tqdm(total=epochs) as pbar:\n",
+    "        for epoch in range(epochs):\n",
+    "            model.train()\n",
+    "            model_loss = 0.0\n",
+    "            \n",
+    "            for batch_idx, (data,target) in enumerate(train_loader):\n",
+    "                data = data.cuda().type(torch.cuda.FloatTensor)\n",
+    "                target = target.cuda().type(torch.cuda.FloatTensor)\n",
+    "                optimizer.zero_grad()\n",
+    "                \n",
+    "                prediction = model(data)\n",
+    "                \n",
+    "                loss = loss_function()\n",
+    "                    \n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "                model_loss += loss/len(train_loader)\n",
+    "                \n",
+    "            pbar.update(1)\n",
+    "            pbar.set_postfix(**{'train__loss': model_loss.item()})   \n",
+    "            writer.add_scalar(\"Train loss\", model_loss.item(), epoch)\n",
+    "            \n",
+    "            \n",
+    "    \n",
+    "    torch.save(model, \"test.pt\")\n",
+    "    writer.close()"
    ]
   }
  ],
