--- a/ASL_trans_ML.ipynb
+++ b/ASL_trans_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,31 @@
     "import os\n",
     "from string import ascii_lowercase\n",
     "import csv\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()\n",
+    "home_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\'\n",
+    "ds_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\dataset\\\\'\n",
+    "newcoming_ds_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\letters\\\\'\n",
+    "old_ds_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\old_dataset\\\\'\n",
+    "\n",
+    "for c in ascii_lowercase:\n",
+    "    \n",
+    "    combined_csv = pd.concat([pd.read_csv(old_ds_dir + c + \".csv\", header = None), pd.read_csv(newcoming_ds_dir + c + \".csv\", header = None)], axis=0, ignore_index=True)\n",
+    "    combined_csv.to_csv(ds_dir + c +\".csv\", index=False, header = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +47,7 @@
     "        self.length = 0\n",
     "        class_index = 0\n",
     "        for c in ascii_lowercase:\n",
-    "            with open(c + \".csv\") as csv_file:\n",
+    "            with open(ds_dir + c + \".csv\") as csv_file:\n",
     "                reader = csv.reader(csv_file)\n",
     "                for row in reader:\n",
     "                    int_row = [int(element) for element in row]\n",
@@ -47,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18071"
+       "44071"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,34 +87,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((tensor([[1.0000, 0.0781, 0.6557, 1.0000, 0.0063, 0.8850, 1.0000]]),\n",
-       "  tensor(7)),\n",
-       " (tensor([[1.0000, 0.3133, 0.7263, 0.7221, 0.1299, 0.7346, 0.8066]]),\n",
-       "  tensor(25)))"
+       "((tensor([[1.0000, 0.3746, 0.7140, 0.8747, 0.1741, 0.7187, 0.9810]]),\n",
+       "  tensor(25)),\n",
+       " (tensor([[0.9917, 0.1338, 0.6962, 0.9199, 0.2899, 0.8899, 1.0000]]),\n",
+       "  tensor(13)))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainset, testset = torch.utils.data.random_split(dataset, [15361,2710])\n",
-    "train_loader = torch.utils.data.DataLoader(trainset, batch_size=8, shuffle=True)\n",
-    "test_loader = torch.utils.data.DataLoader(testset, batch_size=4, shuffle=True)\n",
+    "trainset, testset = torch.utils.data.random_split(dataset, [39664,4407])\n",
+    "train_loader = torch.utils.data.DataLoader(trainset, batch_size=16, shuffle=True)\n",
+    "test_loader = torch.utils.data.DataLoader(testset, batch_size=1, shuffle=True)\n",
     "\n",
     "trainset[0], trainset[1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -105,29 +124,33 @@
        "Layer (type:depth-idx)                   Output Shape              Param #\n",
        "==========================================================================================\n",
        "Model                                    [8, 26]                   --\n",
-       "├─Sequential: 1-1                        [8, 8, 3]                 --\n",
+       "├─Sequential: 1-1                        [8, 16, 3]                --\n",
        "│    └─Conv1d: 2-1                       [8, 4, 5]                 16\n",
        "│    └─Dropout1d: 2-2                    [8, 4, 5]                 --\n",
        "│    └─ReLU: 2-3                         [8, 4, 5]                 --\n",
-       "│    └─Conv1d: 2-4                       [8, 8, 3]                 104\n",
-       "│    └─Dropout1d: 2-5                    [8, 8, 3]                 --\n",
-       "│    └─ReLU: 2-6                         [8, 8, 3]                 --\n",
-       "├─Linear: 1-2                            [8, 32]                   800\n",
-       "├─Linear: 1-3                            [8, 26]                   858\n",
+       "│    └─Conv1d: 2-4                       [8, 8, 4]                 72\n",
+       "│    └─Dropout1d: 2-5                    [8, 8, 4]                 --\n",
+       "│    └─ReLU: 2-6                         [8, 8, 4]                 --\n",
+       "│    └─Conv1d: 2-7                       [8, 16, 3]                272\n",
+       "│    └─Dropout1d: 2-8                    [8, 16, 3]                --\n",
+       "│    └─ReLU: 2-9                         [8, 16, 3]                --\n",
+       "├─Linear: 1-2                            [8, 64]                   3,136\n",
+       "├─Dropout: 1-3                           [8, 64]                   --\n",
+       "├─Linear: 1-4                            [8, 26]                   1,690\n",
        "==========================================================================================\n",
-       "Total params: 1,778\n",
-       "Trainable params: 1,778\n",
+       "Total params: 5,186\n",
+       "Trainable params: 5,186\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (M): 0.02\n",
+       "Total mult-adds (M): 0.05\n",
        "==========================================================================================\n",
        "Input size (MB): 0.00\n",
        "Forward/backward pass size (MB): 0.01\n",
-       "Params size (MB): 0.01\n",
-       "Estimated Total Size (MB): 0.01\n",
+       "Params size (MB): 0.02\n",
+       "Estimated Total Size (MB): 0.03\n",
        "=========================================================================================="
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,20 +160,24 @@
     "    def __init__(self):\n",
     "        super(Model, self).__init__()\n",
     "        self.conv_layers = nn.Sequential(nn.Conv1d(in_channels=1, out_channels=4, kernel_size=3),\n",
-    "                                    nn.Dropout1d(0.5),\n",
+    "                                    nn.Dropout1d(0.25),\n",
     "                                    nn.ReLU(),\n",
-    "                                    nn.Conv1d(in_channels=4, out_channels=8, kernel_size=3),\n",
-    "                                    nn.Dropout1d(0.5),\n",
-    "                                    nn.ReLU()\n",
+    "                                    nn.Conv1d(in_channels=4, out_channels=8, kernel_size=2),\n",
+    "                                    nn.Dropout1d(0.25),\n",
+    "                                    nn.ReLU(),\n",
+    "                                    nn.Conv1d(in_channels=8, out_channels=16, kernel_size=2),\n",
+    "                                    nn.Dropout1d(0.25),\n",
+    "                                    nn.ReLU(),\n",
     "                                    )\n",
     "        \n",
-    "        self.linear = nn.Linear(8 * 3, 32)\n",
-    "        self.out = nn.Linear(32, 26)\n",
+    "        self.linear = nn.Linear(16 * 3, 64)\n",
+    "        self.dropout = nn.Dropout(0.25)\n",
+    "        self.out = nn.Linear(64, 26)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        x = self.conv_layers(x)\n",
     "        x = nn.Flatten()(x)\n",
-    "        x = nn.ReLU()(self.linear(x))\n",
+    "        x = nn.ReLU()(self.dropout(self.linear(x)))\n",
     "        x = self.out(x)\n",
     "        #x = nn.LogSoftmax()(x)\n",
     "        return x\n",
@@ -161,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
-    "def train(train_loader, model, epochs, beta, loss_function):\n",
+    "def train(train_loader, model, epochs, loss_function):\n",
     "    writer = SummaryWriter()\n",
     "    model.cuda()\n",
-    "    optimizer = torch.optim.Adam(model.parameters(), weight_decay=1e-07)\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), weight_decay=1e-05)\n",
     "    \n",
     "    with tqdm(total=epochs) as pbar:\n",
     "        for epoch in range(epochs):\n",
@@ -179,12 +206,14 @@
     "            \n",
     "            for batch_idx, (data,target) in enumerate(train_loader):\n",
     "                data = data.cuda().type(torch.cuda.FloatTensor)\n",
-    "                target = target.cuda().type(torch.cuda.FloatTensor)\n",
+    "                               \n",
+    "                onehot_target = F.one_hot(target, num_classes=26).cuda().type(torch.cuda.FloatTensor)\n",
+    "                \n",
     "                optimizer.zero_grad()\n",
     "                \n",
     "                prediction = model(data)\n",
     "                \n",
-    "                loss = loss_function()\n",
+    "                loss = loss_function(prediction, onehot_target)\n",
     "                    \n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
@@ -196,8 +225,75 @@
     "            \n",
     "            \n",
     "    \n",
-    "    torch.save(model, \"test.pt\")\n",
+    "    torch.save(model, \"ASL_interpreter.pt\")\n",
     "    writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [14:57<00:00, 17.94s/it, train__loss=0.785]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Model()\n",
+    "epochs = 50\n",
+    "loss_function = nn.CrossEntropyLoss()\n",
+    "\n",
+    "train(train_loader, model, epochs, loss_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4171623159001305\n",
+      "0.8706603131381893\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test(test_loader, model_name):\n",
+    "    \n",
+    "    file_to_load = model_name + \".pt\"\n",
+    "    test_model = Model()\n",
+    "    test_model = torch.load(file_to_load).cuda()\n",
+    "    \n",
+    "    prediction_loss = nn.CrossEntropyLoss()\n",
+    "    \n",
+    "    test_model.eval()\n",
+    "    correct = 0\n",
+    "    loss = 0\n",
+    "    for batch_idx, (data,target) in enumerate(test_loader):\n",
+    "        \n",
+    "        data = data.cuda().type(torch.cuda.FloatTensor)\n",
+    "        onehot_target = F.one_hot(target, num_classes=26).cuda().type(torch.cuda.FloatTensor)\n",
+    "        prediction = test_model(data).cuda()\n",
+    "        \n",
+    "        \n",
+    "        loss += prediction_loss(prediction,onehot_target)\n",
+    "        pred_class = prediction.data.max(1, keepdim=True)[1]\n",
+    "        correct += pred_class.eq(target.cuda().data.view_as(pred_class)).sum()\n",
+    "\n",
+    "    print(loss.item()/len(testset))\n",
+    "    print(correct.item()/len(testset))\n",
+    "    \n",
+    "\n",
+    "test(test_loader, \"ASL_interpreter\")\n",
+    "        \n",
+    "    "
    ]
   }
  ],
