Cleaning up and fixing minor issues

--- a/ASL_trans_ML.ipynb
+++ b/ASL_trans_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,25 +19,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfor c in ascii_lowercase:\\n    \\n    combined_csv = pd.concat([pd.read_csv(old_ds_dir + c + \".csv\", header = None), pd.read_csv(newcoming_ds_dir + c + \".csv\", header = None)], axis=0, ignore_index=True)\\n    combined_csv.to_csv(ds_dir + c +\".csv\", index=False, header = False)'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.getcwd()\n",
     "home_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\'\n",
     "ds_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\dataset\\\\'\n",
     "newcoming_ds_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\letters\\\\'\n",
-    "old_ds_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\old_dataset\\\\'\n",
-    "\n",
-    "for c in ascii_lowercase:\n",
-    "    \n",
-    "    combined_csv = pd.concat([pd.read_csv(old_ds_dir + c + \".csv\", header = None), pd.read_csv(newcoming_ds_dir + c + \".csv\", header = None)], axis=0, ignore_index=True)\n",
-    "    combined_csv.to_csv(ds_dir + c +\".csv\", index=False, header = False)"
+    "old_ds_dir = r'c:\\\\Users\\\\tutha\\\\Desktop\\\\Hacked2023\\\\ASL_Translation-NAIT\\\\old_dataset\\\\'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +81,7 @@
        "44071"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,19 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((tensor([[1.0000, 0.3746, 0.7140, 0.8747, 0.1741, 0.7187, 0.9810]]),\n",
-       "  tensor(25)),\n",
-       " (tensor([[0.9917, 0.1338, 0.6962, 0.9199, 0.2899, 0.8899, 1.0000]]),\n",
-       "  tensor(13)))"
+       "((tensor([[0.9978, 0.6613, 0.8059, 1.0000, 0.1915, 0.8816, 0.5604]]),\n",
+       "  tensor(19)),\n",
+       " (tensor([[0.9502, 0.1153, 0.7079, 0.3309, 0.0586, 0.9028, 0.8166]]),\n",
+       "  tensor(23)))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +156,7 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,15 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4171623159001305\n",
-      "0.8706603131381893\n"
+      "0.42108773373681074\n",
+      "0.8702064896755162\n"
      ]
     }
    ],
@@ -284,7 +290,7 @@
     "        \n",
     "        \n",
     "        loss += prediction_loss(prediction,onehot_target)\n",
-    "        pred_class = prediction.data.max(1, keepdim=True)[1]\n",
+    "        pred_class = nn.Softmax(dim=1)(prediction).data.max(1, keepdim=True)[1]\n",
     "        correct += pred_class.eq(target.cuda().data.view_as(pred_class)).sum()\n",
     "\n",
     "    print(loss.item()/len(testset))\n",
